--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>Anton Prokopev, partdirector</title>
     <link rel="stylesheet" href="../assets/style.css">
+
+    <link rel="icon" href="../assets/32px.png" sizes="32x32">
+    <link rel="icon" href="../assets/128px.png" sizes="128x128">
+    <link rel="icon" href="../assets/180px.png" sizes="180x180">
+    <link rel="icon" href="../assets/192px.png" sizes="192x192">
+
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
