--- a/cv/index.html
+++ b/cv/index.html
@@ -5,13 +5,19 @@
     <title>Anton Prokopev, partdirector</title>
     <link rel="stylesheet" href="../assets/style.css">
 
-    <link rel="icon" href="../assets/32px.png" sizes="32x32">
-    <link rel="icon" href="../assets/128px.png" sizes="128x128">
-    <link rel="icon" href="../assets/180px.png" sizes="180x180">
-    <link rel="icon" href="../assets/192px.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="../assets/32px.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="../assets/128px.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="../assets/180px.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="../assets/192px.png" sizes="192x192">
 
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
+
+    <meta property="og:title" content="Anton Prokopev CV">
+    <meta property="og:image" content="../assets/share.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://partdirector.ch">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
