--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
 
+    <meta property="og:title" content="Anton Prokopev CV">
+    <meta property="og:image" content="assets/share.jpg">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://partdirector.ch">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
       #tba {
