--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="about">
-      <p>I&nbsp;am communication art director, team lead &&nbsp;designer in fintech and classified industries. I am responsible for brand developing and brand keeping for companies and individuals.</p>
+      <p>I&nbsp;am communication art director, team lead &&nbsp;designer in&nbsp;fintech and classified industries. I&nbsp;am responsible for brand developing and brand keeping for companies and individuals.</p>
       <p>Currently in&nbsp;Yandex Fintech.</p>
     </div>
 
