--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </style>
   </head>
   <body>
-    <h1 class="header">Anton Prokopev,<br>partdirector</h1>
+    <h1 class="header">Anton Prokopev<br>partdirector</h1>
 
     <div class="container">
       <div id="tba">TBA</div>
@@ -77,11 +77,6 @@
     <div class="about">
       <p>I&nbsp;am communication art director, team lead &&nbsp;designer in&nbsp;fintech and classified industries. I&nbsp;am responsible for brand developing and brand keeping for companies and individuals.</p>
       <p>Currently in&nbsp;Yandex Fintech.</p>
-    </div>
-
-    <div class="project">
-      <h1>CV</h1>
-      <a href="#" class="close">✕ Close</a>
     </div>
 
     <footer>
