--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Anton Prokopev, partdirector</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Anton Prokopev, CV</title>
     <link rel="stylesheet" href="../assets/style.css">
 
     <link rel="icon" type="image/png" href="../assets/32px.png" sizes="32x32">
@@ -26,34 +28,43 @@
     <h2 class="subheader">WORK</h2>
 
     <ol>
-      <li>Currently in Yandex Fintech, head of&nbsp;visual communications
-
+      <li>
+        Currently in Yandex Fintech, head of&nbsp;visual communications
         <p class="hidden">I have been working at <a href="http://yandex.com">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
         <p class="hidden">The company's business is based on search advertising, but it also has many other verticals. I&nbsp;am head of visual communications in the Fintech Department, and before that I&nbsp;was responsible for the communication design of Yandex Classifieds.</p>
         <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects.</p>
       </li>
-      <li>2016—2021, Yandex Classifieds, head of&nbsp;visual communications
-
-      <p class="hidden">Yandex Classifieds include 4 verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
-      <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer6 service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel.</p>
+      <li>
+        2016—2021, Yandex Classifieds, head of&nbsp;visual communications
+        <p class="hidden">Yandex Classifieds include 4&nbsp;verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
+        <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer &&nbsp;service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel.</p>
       </li>
-      <li>2014—2016, Infographics Studio, team&nbsp;lead
+      <li>
+        2014—2016, Infographics Studio, team&nbsp;lead
         <p class="hidden">In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
-      <li>2007—2014, 16 Tons Club & UMC Agency, graphic designer
+      <li>
+        2007—2014, 16&nbsp;Tons Club &&nbsp;UMC Agency, graphic designer
       </li>
     </ol>
 
     <h2 class="subheader margintop">STUDY</h2>
-    <p>2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus</p>
-    <p class="hidden"><span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
-    <p>2020, Cinema4d Online Course @&nbsp;C2D42</p>
-    <p class="hidden"><span>I&nbsp;learned how to do simple and generative 3d&nbsp;modeling in order to create sketches, illustrations and mockups, as well as to brief contractors more accurately</span></p>
-    <p>2016, Eike König (<a href="https://www.hort.org.uk/">HORT</a>) Workshop @ Strelka Institute</p>
-    <p class="hidden"><span>We had a lot of fun at the two-day creative workshop</span></p>
-    <p>2015, UI/UX Intensive @&nbsp;British High School Of&nbsp;Art &&nbsp;Design</p>
-    <p>2013, Intensive course in graphic design @&nbsp;Higher Academic School of Graphic Design</p>
-    <p>2004—2009, Moscow State Printing University. Engineering specialist degree in packaging design</p>
-    <p class="hidden"><span>Here I received basic engineering and printing education. I studied classic engineering curriculum and also subjects like color theory and design printing techniques</span></p>
+    <ul>
+      <li>
+        2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus
+        <p class="hidden"><span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
+      </li>
+      <li>
+        2020, Cinema4d Online Course @&nbsp;C2D42
+        <p class="hidden"><span>I&nbsp;learned how to do simple and generative 3d&nbsp;modeling in order to create sketches, illustrations and mockups, as well as to brief contractors more accurately</span></p>
+      <li>2016, Eike König (<a href="https://www.hort.org.uk/">HORT</a>) Workshop @ Strelka Institute
+        <p class="hidden"><span>We had a lot of fun at the two-day creative workshop</span></p>
+      </li>
+      <li>2015, UI/UX Intensive @&nbsp;British High School Of&nbsp;Art &&nbsp;Design</li>
+      <li>2013, Intensive course in&nbsp;graphic design @&nbsp;Higher Academic School of Graphic Design</li>
+      <li>2004—2009, Moscow State Printing University. Engineering specialist degree in&nbsp;packaging design</li>
+        <p class="hidden"><span>Here I&nbsp;received basic engineering and printing education. I&nbsp;studied classic engineering curriculum and also subjects like color theory and design printing techniques</span></p>
+      </li>
+    </ul>
 
     <h2 class="subheader margintop">SKILLS</h2>
     <p>Adobe Suite, Figma, Keynote, Cinema4D, Redshift, Html, Css, Github</p>
@@ -61,7 +72,7 @@
 
     <h2 class="subheader margintop">OTHER</h2>
     <ol>
-      <li>I am a fan of road cycling. My favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</li>
+      <li>I am a fan of road cycling. My&nbsp;favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</li>
       <li>As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection had burned down in a warehouse fire last year. Since then, Spotify has been enough for me.</li>
       <li>This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</li>
     </ol>
@@ -70,7 +81,7 @@
     <p>Here is my <a href="https://www.facebook.com/anprokopiev">Facebook</a> and <a href="https://www.linkedin.com/in/prokopev/">Linkedin</a></p>
     <p>My favorite social network is <a href="https://www.strava.com/athletes/8472954">Strava</a>. I don't regret about time I spent earning posts in here</p>
     <p>My email is <a href="mailto:7940744@gmail.com">7940744@gmail.com</a></p>
-    <p>My main instagram account is private. There are mostly photos of my kids & friends. But I&nbsp;have other one — <a href="https://www.instagram.com/partdirector">partdirector</a> — for my experiments in typography</p>
+    <p>My main instagram account is private. There are mostly photos of my kids & friends. But&nbsp;I&nbsp;have other one&nbsp;— <a href="https://www.instagram.com/partdirector">partdirector</a> — for my experiments in typography</p>
 
     <div class="switcher">
       <a class="switcherAnchor" href="#">More Details</a>, <a href="https://partdirector.ch">Back to works</a>
