--- a/cv/index.html
+++ b/cv/index.html
@@ -47,8 +47,8 @@
       </li>
     </ol>
 
-    <h2 class="subheader margintop">STUDY</h2>
-    <ul>
+    <h2 class="subheader margintop">EDUCATION</h2>
+    <ol>
       <li>
         2020, Art Director Wanted Course @&nbsp;DW&nbsp;Campus
         <p class="hidden"><span>I've improved visual art direction skills in&nbsp;a&nbsp;versatile practical course</span><p>
@@ -64,7 +64,7 @@
       <li>2004—2009, Moscow State Printing University. Engineering specialist degree in&nbsp;packaging design</li>
         <p class="hidden"><span>Here I&nbsp;received basic engineering and printing education. I&nbsp;studied classic engineering curriculum and also subjects like color theory and design printing techniques</span></p>
       </li>
-    </ul>
+    </ol>
 
     <h2 class="subheader margintop">SKILLS</h2>
     <p>Adobe Suite, Figma, Keynote, Cinema4D, Redshift, Html, Css, Github</p>
@@ -72,16 +72,16 @@
 
     <h2 class="subheader margintop">OTHER</h2>
     <ol>
-      <li>I am a fan of road cycling. My&nbsp;favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</li>
-      <li>As a designer from the 2010s, I, of course, used to collect rare vinyl records, but my entire collection had burned down in a warehouse fire last year. Since then, Spotify has been enough for me.</li>
-      <li>This site is made using Aeroport font by <a href="https://brownfox.org/">Brownfox</a> type foundry.</li>
+      <li>I am a&nbsp;fan of road cycling. My&nbsp;favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</li>
+      <li>As a&nbsp;designer from the 2010s, I,&nbsp;of course, used to collect rare vinyl records, but my entire collection had burned down in a&nbsp;warehouse fire last year. Since then, Spotify has been enough for&nbsp;me.</li>
+      <li>This site is made using Aeroport font by&nbsp;<a href="https://brownfox.org/">Brownfox</a> type foundry.</li>
     </ol>
 
     <h2 class="subheader margintop">OH, I ALMOST FORGOT ABOUT SOCIAL LINKS</h2>
-    <p>Here is my <a href="https://www.facebook.com/anprokopiev">Facebook</a> and <a href="https://www.linkedin.com/in/prokopev/">Linkedin</a></p>
-    <p>My favorite social network is <a href="https://www.strava.com/athletes/8472954">Strava</a>. I don't regret about time I spent earning posts in here</p>
+    <p>Here is&nbsp;my <a href="https://www.facebook.com/anprokopiev">Facebook</a> and <a href="https://www.linkedin.com/in/prokopev/">Linkedin</a></p>
+    <p>My favorite social network is <a href="https://www.strava.com/athletes/8472954">Strava</a>. I&nbsp;don't regret about time I&nbsp;spent earning posts in&nbsp;here</p>
     <p>My email is <a href="mailto:7940744@gmail.com">7940744@gmail.com</a></p>
-    <p>My main instagram account is private. There are mostly photos of my kids & friends. But&nbsp;I&nbsp;have other one&nbsp;— <a href="https://www.instagram.com/partdirector">partdirector</a> — for my experiments in typography</p>
+    <p>My main instagram account is private. There are mostly photos of my kids &&nbsp;friends. But&nbsp;I&nbsp;have other one&nbsp;— <a href="https://www.instagram.com/partdirector">partdirector</a> — for my experiments in&nbsp;typography</p>
 
     <div class="switcher">
       <a class="switcherAnchor" href="#">More Details</a>, <a href="https://partdirector.ch">Back to works</a>
