--- a/cv/index.html
+++ b/cv/index.html
@@ -40,7 +40,7 @@
         <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer &&nbsp;service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel.</p>
       </li>
       <li>
-        2014—2016, Infographics Studio, team&nbsp;lead
+        2014—2016, Infographics Studio, design team&nbsp;lead
         <p class="hidden">In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
       <li>
         2007—2014, 16&nbsp;Tons Club &&nbsp;UMC Agency, graphic designer
