Added Google Analytics

--- a/cv/index.html
+++ b/cv/index.html
@@ -22,6 +22,15 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XSPJW30BFY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XSPJW30BFY');
+  </script>
   <body class="cv">
     <h1 class="header">Anton Prokopev<br> CV<br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
 
@@ -72,16 +81,16 @@
 
     <h2 class="subheader margintop">OTHER</h2>
     <ol>
-      <li>I am a&nbsp;fan of road cycling. My&nbsp;favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea.</li>
-      <li>As a&nbsp;designer from the 2010s, I,&nbsp;of course, used to collect rare vinyl records, but my entire collection had burned down in a&nbsp;warehouse fire last year. Since then, Spotify has been enough for&nbsp;me.</li>
-      <li>This site is made using Aeroport font by&nbsp;<a href="https://brownfox.org/">Brownfox</a> type foundry.</li>
+      <li>I am a&nbsp;fan of road cycling. My&nbsp;favorite places to ride&nbsp;— Versilia and the road around the Geneva&nbsp;Sea</li>
+      <li>As a&nbsp;designer from the 2010s, I,&nbsp;of course, used to collect rare vinyl records. Spring 2021 my entire collection had burned down in a&nbsp;warehouse fire. Since then, Spotify has been enough for&nbsp;me</li>
+      <li>This site is made using Aeroport font by&nbsp;<a href="https://brownfox.org/">Brownfox</a> type foundry</li>
     </ol>
 
     <h2 class="subheader margintop">OH, I ALMOST FORGOT ABOUT SOCIAL LINKS</h2>
     <p>Here is&nbsp;my <a href="https://www.facebook.com/anprokopiev">Facebook</a> and <a href="https://www.linkedin.com/in/prokopev/">Linkedin</a></p>
     <p>My favorite social network is <a href="https://www.strava.com/athletes/8472954">Strava</a>. I&nbsp;don't regret about time I&nbsp;spent earning posts in&nbsp;here</p>
-    <p>My email is <a href="mailto:7940744@gmail.com">7940744@gmail.com</a></p>
     <p>My main instagram account is private. There are mostly photos of my kids &&nbsp;friends. But&nbsp;I&nbsp;have other one&nbsp;— <a href="https://www.instagram.com/partdirector">partdirector</a> — for my experiments in&nbsp;typography</p>
+    <p>You can reach me via telegram <a href="https://t.me/aprokopiev">aprokopiev</a> or&nbsp;email <a href="mailto:7940744@gmail.com">7940744@gmail.com</a></p>
 
     <div class="switcher">
       <a class="switcherAnchor" href="#">More Details</a>, <a href="https://partdirector.ch">Back to works</a>
