--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XSPJW30BFY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XSPJW30BFY');
+  </script>
   <body>
     <h1 class="header">Anton Prokopev<br>partdirector</h1>
 
@@ -83,8 +92,7 @@
 
     <footer>
       <a href="https://partdirector.ch/cv/">CV</a>,
-      <a href="https://linkedin.com/in/prokopev/">Linkedin</a>,
-      <a href="https://t.me/aprokopiev">Tg</a>
+      <a href="https://linkedin.com/in/prokopev/">Linkedin</a>
     </footer>
   </body>
 </html>
