--- a/cv/index.html
+++ b/cv/index.html
@@ -40,17 +40,17 @@
       <li>
         Currently in Yandex Fintech, head of&nbsp;visual communications
         <p class="hidden">I have been working at <a href="http://yandex.com">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
-        <p class="hidden">The company's business is based on search advertising, but it also has many other verticals. I&nbsp;am head of visual communications in the Fintech Department, and before that I&nbsp;was responsible for the communication design of Yandex Classifieds.</p>
-        <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects.</p>
+        <p class="hidden">The company's business is based on search advertising, but it also has many other verticals.</p>
+        <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects</p>
       </li>
       <li>
         2016—2021, Yandex Classifieds, head of&nbsp;visual communications
         <p class="hidden">Yandex Classifieds include 4&nbsp;verticals: auto, real estate, horizontal classifieds and employment. In 2015, Yandex acquired the most popular car classifieds site in Russia&nbsp;— <a href="http://auto.ru">Auto.ru</a>. I&nbsp;rebranded Auto.ru and created an inhouse design studio to solve marketing tasks.</p>
-        <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer &&nbsp;service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel.</p>
+        <p class="hidden">In 5&nbsp;years we have grown this business from 1&nbsp;to 10. We have grown the market share from 40% to&nbsp;70%. We have also launched an offline dealer &&nbsp;service centers, <a href="http://mag.auto.ru">online media about cars</a> and YouTube channel</p>
       </li>
       <li>
         2014—2016, Infographics Studio, design team&nbsp;lead
-        <p class="hidden">In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor.</p>
+        <p class="hidden">In the studio we created interactive infographics on cultural and historical topics. I&nbsp;was a&nbsp;team leader in&nbsp;a&nbsp;team of&nbsp;designer, illustrator and editor</p>
       <li>
         2007—2014, 16&nbsp;Tons Club &&nbsp;UMC Agency, graphic designer
       </li>
