--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     gtag('config', 'G-XSPJW30BFY');
   </script>
   <body>
-    <h1 class="header">Anton Prokopev<br>partdirector</h1>
+    <div class="header">
+      <h1>Anton Prokopev<br>partdirector</h1>
+    </div>
 
     <div class="container">
       <div id="tba">TBA</div>
