--- a/cv/index.html
+++ b/cv/index.html
@@ -32,7 +32,9 @@
     gtag('config', 'G-XSPJW30BFY');
   </script>
   <body class="cv">
-    <h1 class="header">Anton Prokopev<br>CV<br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
+    <div class="header">
+      <h1>Anton Prokopev<br>CV<br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
+    </div>
 
     <h2 class="subheader">WORK</h2>
 
