--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@
   </script>
   <body class="cv">
     <div class="header">
-      <h1>Anton Prokopev<br>CV<br><!--<span>also available in&nbsp;PDF soon</span>--></h1>
+      <h1>Anton Prokopev<br>CV<!--<span>also available in&nbsp;PDF soon</span>--></h1>
     </div>
 
     <h2 class="subheader">WORK</h2>
@@ -43,7 +43,7 @@
         Currently in Yandex Fintech, head of&nbsp;visual communications
         <p class="hidden">I have been working at <a href="http://yandex.com/company/">Yandex</a> since 2016. This is one of the largest IT companies in Russia, which was traded on Nasdaq before the war.</p>
         <p class="hidden">The company's business is based on search advertising, but it also has many other verticals.</p>
-        <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-up communication, web design, landing pages, merch, photography and special projects</p>
+        <p class="hidden">In Fintech Department I&nbsp;organized an inhouse design studio. The studio creates the entire communication design for the <a href="http://bank.yandex.ru">Yandex Bank</a> and the <a href="http://split.yandex.ru">Split</a> BNPL service. These are tasks for branding design, performance design materials, banners, in-app communication, web design, landing pages, merch, photography and special projects</p>
       </li>
       <li>
         2016—2021, Yandex Classifieds, head of&nbsp;visual communications
