--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Anton Prokopev, CV</title>
-    <link rel="stylesheet" href="http://partdirector.ch/assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
 
     <link rel="icon" type="image/png" href="../assets/32px.png" sizes="32x32">
     <link rel="icon" type="image/png" href="../assets/128px.png" sizes="128x128">
