--- a/cv/index.html
+++ b/cv/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Content-Script-Type" content="text/javascript">
 
     <meta property="og:title" content="Anton Prokopev CV">
-    <meta property="og:image" content="http://partdirector.ch/assets/share.jpg">
+    <meta property="og:image" content="../assets/share.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://partdirector.ch">
 
