--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container">
-      <div id="tba">TBA</div>
+      <div id="tba">Echo Online</div>
       <div id="fintech">Yandex Fintech</div>
       <div id="split">Split BNPL</div>
       <div id="ads">Yandex Ads</div>
