--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
-      #tba {
+      #echo {
         background-image: url('assets/00-tba.jpg');
         color: white;
       }
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container">
-      <div id="tba">Echo Online</div>
+      <div id="echo"><a href="/echo/">Echo Online</a></div>
       <div id="fintech">Yandex Fintech</div>
       <div id="split">Split BNPL</div>
       <div id="ads">Yandex Ads</div>
