--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="container">
-      <div id="echo"><a href="/echo/">Echo Online</a></div>
+      <div id="echo" class="whiteLink"><a href="/echo/">Echo Online</a></div>
       <div id="fintech">Yandex Fintech</div>
       <div id="split">Split BNPL</div>
       <div id="ads">Yandex Ads</div>
