--- a/echo/index.html
+++ b/echo/index.html
@@ -44,7 +44,7 @@
 
       <img src="../assets/echo/echo01.png" alt="Old Echo Logotype">
 
-      <p class="subtitle">The radio was turned off the air during the transfer of the editor of the site Maxim Kournikov. Maxim decided to restart the radio in a new format outside of Russia. I was invited to do a brand redesign for the launch of an app, an online radio and a news site.</p>
+      <p class="subtitle">The radio was turned off the air during the broadcast of the site Maxim Kournikov. Maxim decided to restart the radio in a new format outside of Russia. I was invited to do a brand redesign for the launch of an app, an online radio and a news site.</p>
 
 
       <img src="../assets/echo/echo03.png" alt="New 2022 Echo logotype">
