--- a/echo/index.html
+++ b/echo/index.html
@@ -40,15 +40,15 @@
 
     <div class="about">
       <p class="spacer">Redesign for the relaunch of the political conversational radio "Echo"</p>
-      <p class="subtitle">Echo of Moscow Radio was founded in 1990 in Moscow and was the main talk FM radio in the country and a platform that united the entire spectrum of political opinions for more than 30 years. It was blocked by the Russian authorities shortly after the outbreak of the war in Ukraine in early 2022.</p>
+      <p class="subtitle">For 30 years Echo of Moscow was one of the most influential Russian radio stations until it was blocked by state authorities right after the war started. </p>
 
       <img src="../assets/echo/echo01.png" alt="Old Echo Logotype">
 
-      <p class="subtitle">The radio was turned off the air during the broadcast of the site Maxim Kournikov. Maxim decided to restart the radio in a new format outside of Russia. I was invited to do a brand redesign for the launch of an app, an online radio and a news site.</p>
+      <p class="subtitle">The former team did a European relaunch and I was invited to do a brand redesign for the launch of an app, an online radio and a news site.</p>
 
 
       <img src="../assets/echo/echo03.png" alt="New 2022 Echo logotype">
-      <p class="subtitle">The updated sign emphasizes the volume and versatility of opinions — Echo does not have a black-and-white position.</p>
+      <p class="subtitle">The updated sign emphasizes the range and variety of opinions — Echo does not have a black-and-white position.</p>
 
       <p class="subtitle">The sign can be illuminated with a red live broadcast lamp.</p>
 
@@ -99,11 +99,11 @@
 
         <img src="../assets/echo/echo20.png" alt="desc">
 
-        <p class="subtitle">But it is clear that this approach looks very decorative and I needed to look for another way to emphasize the essence of the brand.</p>
+        <p class="subtitle">But it is clear that this approach looks very decorative and I needed to look for another way to emphasize the essence of the brand. </p>
 
         <img src="../assets/echo/echo21.png" alt="desc">
 
-        <p class="subtitle">I found a way to emphasize the volume literally.</p>
+        <p class="subtitle">I found a way to convey the volume literally.</p>
 
         <img src="../assets/echo/echo22.png" alt="desc">
 
@@ -111,19 +111,19 @@
 
         <img src="../assets/echo/echo23.png" alt="desc">
 
-        <p class="subtitle">We leave the method, take the rhyme to the typeface and emphasize its geometricality: the sign turned out to be fresh and elegant.</p>
+        <p class="subtitle">The sign turned out to be fresh and elegant.</p>
 
         <img src="../assets/echo/echo24.png" alt="desc">
         <img src="../assets/echo/echo25.png" alt="desc">
 
         <img src="../assets/echo/echo26.png" alt="desc">
 
-        <p class="subtitle">Such a structure has monumentality and even allusions to the stars on the Kremlin towers.</p>
+        <p class="subtitle">This structure is so monumental I realised that the geometry yet had to be refined paying an hommage to the old logo.</p>
 
         <img src="../assets/echo/echo27.png" alt="desc">
         <img src="../assets/echo/echo28.png" alt="desc">
 
-        <p class="subtitle">We make an alternative version with a reference to the past sign of the "Echo of Moscow" and refine the geometry.</p>
+        <p class="subtitle">I made an alternative version with a reference to the past sign of the "Echo of Moscow" and refined the geometry.</p>
 
         <img src="../assets/echo/echo29.png" alt="desc">
 
