--- a/echo/index.html
+++ b/echo/index.html
@@ -43,6 +43,8 @@
       <p class="subtitle">For 30 years Echo of Moscow was one of the most influential Russian radio stations until it was blocked by state authorities right after the war started. </p>
 
       <img src="../assets/echo/echo01.png" alt="Old Echo Logotype">
+      <p class="subtitle">(Orignial Echo logotype is above.)</p>
+
 
       <p class="subtitle">The former team did a European relaunch and I was invited to do a brand redesign for the launch of an app, an online radio and a news site.</p>
 
