--- a/echo/index.html
+++ b/echo/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="about">
-      <p class="spacer">Redesign for the relaunch of the political conversational radio "Echo"</p>
+      <p class="spacer">Echo Radio relaunch redesign</p>
       <p class="subtitle">For 30 years Echo of Moscow was one of the most influential Russian radio stations until it was blocked by state authorities right after the war started. </p>
 
       <img src="../assets/echo/echo01.png" alt="Old Echo Logotype">
@@ -56,7 +56,7 @@
 
       <img src="../assets/echo/echo04.png" alt="New 2022 Echo logotype with red lights on">
 
-      <p class="subtitle">I suggested taking the FormaDJR font family as the basis of typography. Forma is a reference to magazine fonts of the 60s, brought back to life by David Johnatan Ross and Cyrillized by Jovana Jocić. The Cyrillic license was provided by Ilya Ruderman's Type Today dictionary. It seems to me that the set density, shape and contrast are ideal for media with such a news agenda.</p>
+      <p class="subtitle">I suggested FormaDJR font family as the basis of typography. Forma is a reference to magazine fonts of the 60s, brought back to life by David Johnatan Ross and Cyrillized by Jovana Jocić. The Cyrillic license was provided by Ilya Ruderman's Type Today dictionary. It seems to me that the set density, shape and contrast are ideal for media with such a news agenda.</p>
 
       <img src="../assets/echo/echo05.png" alt="Typography">
       <img src="../assets/echo/echo06.png" alt="desc">
@@ -78,7 +78,7 @@
       <img src="../assets/echo/echo12.png" alt="desc">
       <img src="../assets/echo/echo13.png" alt="desc">
 
-      <p class="subtitle">Logo in the app.</p>
+      <p class="subtitle">logo within app interface.</p>
 
       <img src="../assets/echo/echo14.png" alt="desc">
       <img src="../assets/echo/echo15.png" alt="desc">
@@ -157,11 +157,11 @@
             <td>Haya Goldfinger</td>
           </tr>
           <tr>
-            <td>Product Designer & Art Director</td>
+            <td>Product Design</td>
             <td>Alexey Grigoriev</td>
           </tr>
           <tr>
-            <td>Brand Desiger & Art Director</td>
+            <td>Brand Design</td>
             <td>Anton Prokopev</td>
           </tr>
         </table>
