--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Anton Prokopev, CV</title>
+    <title>Anton Prokopev CV</title>
     <link rel="stylesheet" href="../assets/style.css">
 
     <link rel="icon" type="image/png" href="../assets/32px.png" sizes="32x32">
