--- a/echo/index.html
+++ b/echo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Echo Online Media</title>
+    <title>Echo Online Media Redesign</title>
     <link rel="stylesheet" href="../assets/style.css">
 
     <link rel="icon" href="assets/32px.png" sizes="32x32">
@@ -15,8 +15,8 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
 
-    <meta property="og:title" content="Anton Prokopev CV">
-    <meta property="og:image" content="assets/shareEcho.png">
+    <meta property="og:title" content="Echo Online Media Redesign">
+    <meta property="og:image" content="../assets/shareEcho.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://partdirector.ch">
 
@@ -120,7 +120,7 @@
 
         <img src="../assets/echo/echo26.png" alt="desc">
 
-        <p class="subtitle">This structure is so monumental I realised that the geometry yet had to be refined paying an hommage to the old logo.</p>
+        <p class="subtitle">This structure is so monumental I realised that the geometry yet had to be changed paying an hommage to the old logo.</p>
 
         <img src="../assets/echo/echo27.png" alt="desc">
         <img src="../assets/echo/echo28.png" alt="desc">
