--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <meta http-equiv="Content-Script-Type" content="text/javascript">
 
-    <meta property="og:title" content="Anton Prokopev CV">
+    <meta property="og:title" content="Anton Prokopev">
     <meta property="og:image" content="/assets/share.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://partdirector.ch">
