--- a/echo/index.html
+++ b/echo/index.html
@@ -130,43 +130,46 @@
         <img src="../assets/echo/echo29.png" alt="desc">
 
         <p class="subtitle">Done.</p>
+
+        <div class="credits">
+          <table>
+            <tr>
+              <td class="spacer" colspan="2">
+                <h2>Credits</h2>
+              </td>
+            </tr>
+            <tr>
+              <td class="spacer" colspan="2">
+                &nbsp;
+              </td>
+            </tr>
+            <tr>
+              <td>Head of Project</td>
+              <td>Maxim Kournikov</td>
+            </tr>
+            <tr>
+              <td>Mediator & Producer</td>
+              <td>Tonia Samsonova</td>
+            </tr>
+            <tr>
+              <td>Producer</td>
+              <td>Haya Goldfinger</td>
+            </tr>
+            <tr>
+              <td>Product Design</td>
+              <td>Alexey Grigoriev</td>
+            </tr>
+            <tr>
+              <td>Brand Design</td>
+              <td>Anton Prokopev</td>
+            </tr>
+          </table>
+        </div>
       </div>
 
-      <div class="credits">
-        <table>
-          <tr>
-            <td class="spacer" colspan="2">
-              Credits
-            </td>
-          </tr>
-          <tr>
-            <td class="spacer" colspan="2">
-              &nbsp;
-            </td>
-          </tr>
-          <tr>
-            <td>Head of Project</td>
-            <td>Maxim Kournikov</td>
-          </tr>
-          <tr>
-            <td>Mediator & Producer</td>
-            <td>Tonia Samsonova</td>
-          </tr>
-          <tr>
-            <td>Producer</td>
-            <td>Haya Goldfinger</td>
-          </tr>
-          <tr>
-            <td>Product Design</td>
-            <td>Alexey Grigoriev</td>
-          </tr>
-          <tr>
-            <td>Brand Design</td>
-            <td>Anton Prokopev</td>
-          </tr>
-        </table>
       </div>
-    </div>
+
+
 
     <footer>
       <a href="https://partdirector.ch">Back to works</a>
