--- a/echo/index.html
+++ b/echo/index.html
@@ -148,7 +148,7 @@
               <td>Maxim Kournikov</td>
             </tr>
             <tr>
-              <td>Mediator & Producer</td>
+              <td>Product Manager</td>
               <td>Tonia Samsonova</td>
             </tr>
             <tr>
@@ -168,8 +168,6 @@
       </div>
 
       </div>
-
-
 
     <footer>
       <a href="https://partdirector.ch">Back to works</a>
