--- a/echo/index.html
+++ b/echo/index.html
@@ -56,7 +56,7 @@
 
       <img src="../assets/echo/echo04.png" alt="New 2022 Echo logotype with red lights on">
 
-      <p class="subtitle">I suggested FormaDJR font family as the basis of typography. Forma is a reference to magazine fonts of the 60s, brought back to life by David Johnatan Ross and Cyrillized by Jovana Jocić. The Cyrillic license was provided by Ilya Ruderman's Type Today dictionary. It seems to me that the set density, shape and contrast are ideal for media with such a news agenda.</p>
+      <p class="subtitle">I suggested FormaDJR font family as the basis of typography. Forma is a reference to magazine fonts of the 60s, brought back to life by David Johnatan Ross and Cyrillized by Jovana Jocić. The Cyrillic license was provided by Ilya Ruderman's Type Today . It seems to me that the set density, shape and contrast are ideal for media with such a news agenda.</p>
 
       <img src="../assets/echo/echo05.png" alt="Typography">
       <img src="../assets/echo/echo06.png" alt="desc">
@@ -119,19 +119,16 @@
         <img src="../assets/echo/echo25.png" alt="desc">
 
         <img src="../assets/echo/echo26.png" alt="desc">
-
-        <p class="subtitle">This structure is so monumental I realised that the geometry yet had to be changed paying an hommage to the old logo.</p>
-
         <img src="../assets/echo/echo27.png" alt="desc">
         <img src="../assets/echo/echo28.png" alt="desc">
 
-        <p class="subtitle">I made an alternative version with a reference to the past sign of the "Echo of Moscow" and refined the geometry.</p>
+        <p class="subtitle">This structure is so monumental I realised that the geometry yet had to be changed paying an hommage to the old logo.</p>
 
         <img src="../assets/echo/echo29.png" alt="desc">
 
+        <p class="subtitle">I made an alternative version with a reference to the past sign of the "Echo of Moscow" and refined the geometry.</p>
+
         <p class="subtitle">Done.</p>
-
-
       </div>
       <div class="credits">
         <table>
@@ -158,11 +155,11 @@
             <td>Haya Goldfinger</td>
           </tr>
           <tr>
-            <td>Product Design</td>
+            <td>Product Designer</td>
             <td>Alexey Grigoriev</td>
           </tr>
           <tr>
-            <td>Brand Design</td>
+            <td>Brand Designer</td>
             <td>Anton Prokopev</td>
           </tr>
         </table>
