--- a/durer/index.html
+++ b/durer/index.html
@@ -115,14 +115,14 @@
         margin: 24px 0;
       }
 
-      @media (min-width: 0px) {
+      @media screen and (min-width: 0px) {
         h1 img {
           width: 75vw;
         }
 
         h2, a {
-          font-size: 32px;
-          line-height: 32px;
+          font-size: 24px;
+          line-height: 24px;
         }
 
         div p {
@@ -135,19 +135,19 @@
           gap: 12px;
         }
       }
-      @media (min-width: 960px) {
+      @media screen and (min-width: 960px) {
 
         h1 img {
           max-width: 720px;
         }
 
         h2, a {
-          font-size: 56px;
-          line-height: 56px;
+          font-size: 40px;
+          line-height: 40px;
         }
 
         div p {
-          font-size: 24px;
+          font-size: 20px;
           line-height: 32px;
         }
 
